# trmnl-zenml

./: .gitignore  LICENSE  README.md  pyproject.toml  zenml_trmnl.py
.github/workflows/: update-trmnl.yml
